# pychemauth

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CITATION.cff  CODEMETA.yaml  CODEOWNERS  LICENSE  README.md  __init__.py  plsda.py  pyproject.toml  requirements.txt  setup.py  utils.py  version.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-app.yml
analysis/: __init__.py  compare.py  cross_validation.py  inspect.py
case_studies/beef_site/: beef_site.ipynb
case_studies/pgaa/: df_foreign.pkl  df_min.pkl  pgaa.ipynb  utils.py
case_studies/salmon/: performance_summary.ipynb  salmon.ipynb  salmon_breeding.ipynb
case_studies/stamp/: shap_values_test.plsda.slow  shap_values_test.simca.Glaucous-winged_gull.slow  shap_values_test.simca.Glaucous_gull.slow  shap_values_test.simca.Laysan_albatross.slow  shap_values_test.simca.Murre.slow  shap_values_train.plsda.slow  shap_values_train.simca.Glaucous-winged_gull.slow  shap_values_train.simca.Glaucous_gull.slow  shap_values_train.simca.Laysan_albatross.slow  shap_values_train.simca.Murre.slow  stamp.ipynb
case_studies/strawberries/: DB_strawberries.xlsx  strawberries.ipynb  strawberries_v2.ipynb
classifier/: __init__.py  pca.py  plsda.py  simca.py  utils.py
docs/: applications.rst  carpentry.rst  chemometrics.rst  citation.rst  conf.py  contributing.rst  cross_validation.rst  examples.rst  index.rst  make_docs.sh  modules.rst  pychemauth.analysis.rst  pychemauth.classifier.rst  pychemauth.eda.rst  pychemauth.manifold.rst  pychemauth.preprocessing.rst  pychemauth.regressor.rst  pychemauth.rst  quickstart.rst  requirements.in  requirements.txt  toy_examples.rst
docs/jupyter/: simca_example.ipynb
eda/: __init__.py  data.py  screen.py
examples/: elliptic_manifold_example.ipynb  elliptical_manifold_example.ipynb  imputing_examples.ipynb  pca_example.ipynb  pls_example.ipynb  plsda_example.ipynb  shap_example.ipynb  simca_example.ipynb
manifold/: __init__.py  elliptic.py  elliptical.py
preprocessing/: __init__.py  feature_selection.py  filter.py  imbalanced.py  missing.py  scaling.py
pychemauth/: __init__.py  datasets.py  utils.py
pychemauth/analysis/: __init__.py  compare.py  cross_validation.py  explain.py  inspect.py
pychemauth/classifier/: __init__.py  cnn.py  osr.py  pca.py  plsda.py  simca.py
pychemauth/eda/: __init__.py  data.py  explore.py  screen.py
regressor/: __init__.py  pca.py  pcr.py  pls.py
tests/: __init__.py  plsda3_test.csv  plsda3_train.csv  test_api.py  test_camexplain.py  test_cnn.py  test_datasets.py  test_ddsimca.py  test_deepood.py  test_fastnumpyio.py  test_imaging.py  test_jsdivergence.py  test_lod.py  test_msc.py  test_nntools.py  test_osc.py  test_osr.py  test_pca.py  test_pcaia.py  test_pcr.py  test_pls.py  test_plsda.py  test_plsia.py  test_simca.py  test_snv.py  test_types.py
(+420 files in other folders)
