[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "pychemauth"
description="Python-based Chemometric Authentication"
authors = [
    {name = "Nathan A. Mahynski", email = "nathan.mahynski@gmail.com"}
]
maintainers = [
    {name = "Nathan A. Mahynski", email = "nathan.mahynski@gmail.com"}
]
keywords = ["chemometric", "authentication", "cheminformatics", "chemoinformatics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.10"
dependencies = [
    "kennard-stone==2.2.1",
    "mypy==1.11.2",  # For type hints and checking
    "types-requests==2.32.0.20240914",  # For type checking
    "baycomp==1.0.3",
    "bokeh>=3.4.3",  # Default in Colab
    "bokeh-sampledata==2024.2",
    "BorutaShap @ git+https://github.com/Ekeany/Boruta-Shap.git@38af879",
    "imbalanced-learn==0.11.0",
    "IPython",
    "ipywidgets",
    "matplotlib==3.7.2",
    "nodejs==0.1.1",
    "numpy==1.26.4",
    "pandas==2.1.4",  # For Colab
    "pre-commit==3.3.3",
    "scikit-learn==1.3.0",
    "scipy==1.11.1",
    "seaborn==0.12.2",
    "shap==0.45.1",
    "tqdm==4.66.1",
    "umap-learn==0.5.3",
    "watermark==2.4.3",
    "pytest==7.4.0",
    "xgboost==2.0.0",
    "missingno==0.5.2",
    "wandb>=0.17.5",
    "pyts==0.13.0",
    "pillow==10.0.0",
    "visualkeras>=0.1.3",
    "opencv-python==4.10.0.82",  # For SHAP explanations
    "huggingface_hub==0.23.4",
    "tensorflow-cpu==2.14.0",  # This command should install keras==2.14.0 as well - based on Keras recommendation (https://keras.io/getting_started/#installing-keras-3) for creating a "universal GPU environment" based on Colab recommendations: https://colab.research.google.com/drive/13cpd3wCwEHpsmypY9o6XB6rXgBm5oSxu - CPU only default is more portable, we can overwrite on Colab
    "torch", # For DIME - just need torch tensor libraries so no need for GPU support which can also cause conflicts
    "dime-pytorch==1.0.1"
] 

[project.optional-dependencies]
gpu = [
    "tensorflow[and-cuda]==2.14.0", # Should overwrite the cpu default version
]

[tool.pytest.ini_options]
testpaths = [ 
    "tests",
]

[tool.setuptools.dynamic]
version = {attr = "pychemauth.__version__"}

[project.urls]
Repository = "https://github.com/mahynski/pychemauth.git"
Documentation = "https://pychemauth.readthedocs.io/"
Issues = "https://github.com/mahynski/pychemauth/issues"
